feat: implement manual calendar backend
